--- a/macros.cfg
+++ b/macros.cfg
@@ -1,15 +1,17 @@
 #####################################################################
 # 	Macros
 #####################################################################
-[include macros/nozzle_scrub.cfg]
-[include macros/filament.cfg]
+[include macros/*.cfg]
+[include macros/klicky/klicky-probe.cfg]
 
-
+[endstop_phase]
 
 [gcode_macro G32]
 gcode:
+    STATUS_HOMING
     BED_MESH_CLEAR
     G28
+    STATUS_LEVELING
     QUAD_GANTRY_LEVEL
     G28
     ##	Uncomment for for your size printer:
@@ -30,25 +32,31 @@ gcode:
     {% set bedtemp = params.BED|int %}
     {% set hotendtemp = params.HOTEND|int %}
     {% set chambertemp = params.CHAMBER|default(0)|int %}
+    {% set FL_SIZE = params.SIZE|default("0_0_0_0")|string %}
     
     G28                                                                         ; Home printer
     M140 S{bedtemp}                                                             ; Start heating bed
     G90                                                                         ; Absolute positioning
-    clean_nozzle                                                                ; Clean Nozzle
     G0 X125 Y0 Z80 F3600                                                        ; Go for Nozzle check
     M117 Heating Bed
+    STATUS_HEATING
     M190 S{bedtemp}                                                              ; set & wait for bed temp
     G1 X125 Y125 Z10 F3600
     M106
     M117 Heating Chamber
+    M109 S160
     TEMPERATURE_WAIT SENSOR="temperature_sensor chamber" MINIMUM={chambertemp}   ; wait for chamber temp
     M107
     M117 Homing, QGL and Bed mesh in progress
     G32 ; Home and QGL
-    BED_MESH_CALIBRATE
+    STATUS_MESHING
+    ADAPTIVE_BED_MESH SIZE={FL_SIZE}
+    clean_nozzle
+    CALIBRATE_Z
     M117 Heating hotend
     M109 S{hotendtemp}                                                           ; set & wait for hotend temp
     M117 Priming
+    STATUS_PRINTING
     G1 X0 Y0 Z0.2 F3000 ; get ready to prime
     G92 E0 ; reset extrusion distance
     G1 Y100 E20 F800 ; prime nozzle
@@ -60,6 +68,7 @@ gcode:
 [gcode_macro PRINT_END]
 #   Use PRINT_END for the slicer ending script - please customise for your slicer of choice
 gcode:
+    SET_NOZZLE_LEDS_OFF
     M400                           ; wait for buffer to clear
     G92 E0                         ; zero the extruder
     G1 E-10.0 F3600                ; retract filament
@@ -79,3 +88,14 @@ gcode:
 	# Parameters
 	{% set pa = params.K|float %}
 	SET_PRESSURE_ADVANCE ADVANCE={pa}
+
+[gcode_macro chambertempout]
+gcode:
+   UPDATE_DELAYED_GCODE ID=report_chamber_temp DURATION=2
+
+[delayed_gcode report_chamber_temp]
+initial_duration: 2.
+gcode:
+   {% set chamber_temp = printer["temperature_sensor chamber"] %}
+   M117 Chamber Temp:{chamber_temp.temperature}
+   UPDATE_DELAYED_GCODE ID=report_chamber_temp DURATION=2
