--- a/macros/filament.cfg
+++ b/macros/filament.cfg
@@ -58,8 +58,11 @@ gcode:
 
 [gcode_macro filament_swap_complete]
 gcode:
-    load_filament
     clean_nozzle
     RESUME
 
+[gcode_macro nozzle_swap]
+gcode:
+    G90
+    G1 X125 Y0 Z100 F6000
 #[gcode_macro purge_filament]
