--- a/macros/nozzle_scrub.cfg
+++ b/macros/nozzle_scrub.cfg
@@ -31,7 +31,6 @@
 # Name of the macro is clean_nozzle.
 
 [gcode_macro clean_nozzle]
-
 # If you are putting your purge bucket at the rear left of the bed as per default installation, enable True on your location_bucket_rear 
 # variable. If you want to put your purge bucket elsewhere (perhaps the front), then set it to False. See diagrams and description 
 # further below on how to set your XY position.
@@ -47,7 +46,7 @@ variable_purge_len:            10	         ; Amount of filament, in mm, to purge
 variable_purge_spd:           150	         ; Speed, in mm/min, of the purge.
 variable_purge_temp_min:      210	         ; Minimum nozzle temperature to permit a purge. Otherwise, purge will not occur.
 variable_purge_ret:             5            ; Retract length, in mm, after purging to prevent slight oozing. Adjust as necessary.
-variable_ooze_dwell:            2            ; Dwell/wait time, in seconds, after purging and retracting.
+variable_ooze_dwell:            0            ; Dwell/wait time, in seconds, after purging and retracting.
 
 # Adjust this so that your nozzle scrubs within the brush. Currently defaulted to be a lot higher for safety. Be careful not to go too low!
 variable_brush_top:            1 
@@ -142,6 +141,7 @@ variable_bucket_start: 0
 variable_bucket_pos:            1	        
 
 gcode:
+  STATUS_CLEANING
    # First, check if the axes are homed.
    {% if "xyz" in printer.toolhead.homed_axes %}
 
