--- a/old cfg/printer-20220313_193301.cfg
+++ b/old cfg/printer-20220313_193301.cfg
@@ -551,21 +551,21 @@ gcode:
         SET_LED LED=btt_mini12864 RED=1 GREEN=0 BLUE=0 INDEX=3 
 
 [input_shaper]
-shaper_freq_x: 49.8
+shaper_freq_x: 46.2
 shaper_type_x: mzv
-shaper_freq_y: 40.8
+shaper_freq_y: 38.2
 shaper_type_y: mzv
 
-[mcu rpi]
-serial: /tmp/klipper_host_mcu
+#[mcu rpi]
+#serial: /tmp/klipper_host_mcu
 
-[adxl345]
-cs_pin: rpi:None
+#[adxl345]
+#cs_pin: rpi:None
 
-[resonance_tester]
-accel_chip: adxl345
-probe_points:
-    125, 125, 20  # an example
+#[resonance_tester]
+#accel_chip: adxl345
+#probe_points:
+#    125, 125, 20  # an example
 
 
 
@@ -593,9 +593,9 @@ probe_points:
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 27.239
-#*# pid_ki = 3.632
-#*# pid_kd = 51.074
+#*# pid_kp = 26.196
+#*# pid_ki = 1.397
+#*# pid_kd = 122.795
 #*#
 #*# [stepper_z]
 #*# position_endstop = 2.245
@@ -620,4 +620,4 @@ probe_points:
 #*# max_x = 205.96
 #*#
 #*# [endstop_phase stepper_z]
-#*# trigger_phase = 36/64
+#*# trigger_phase = 20/64
