--- a/old cfg/printer-20220302_110031.cfg
+++ b/old cfg/printer-20220302_110031.cfg
@@ -25,7 +25,6 @@
 [include macros.cfg]
 [include timelapse.cfg]
 
-
 [mcu]
 ##	[X in MOTOR0] - B Motor
 ##	[Y in MOTOR1] - A Motor
@@ -83,6 +82,7 @@ homing_positive_dir: true
 uart_pin: PC4
 interpolate: True
 run_current: 0.8
+hold_current: 0.7
 sense_resistor: 0.110
 stealthchop_threshold: 0
 
@@ -121,6 +121,7 @@ homing_positive_dir: true
 uart_pin: PD11
 interpolate: True
 run_current: 0.8
+hold_current: 0.7
 sense_resistor: 0.110
 stealthchop_threshold: 0
  
@@ -301,7 +302,7 @@ max_temp: 120
 pin: ~PG15
 # Select the probe port by type:
 ## For the PROBE port; use this with the original OMRON sensor.
-#pin: ~!PB7
+# pin: ~!PB7
 ## For the spare endstop port; use this with the Fotek PL-05N (or generic) inductive probe
 # pin: ^PG11
 ## For Octopus Pro Probe port; NPN and PNP proximity switch types can be set by jumper
@@ -310,12 +311,12 @@ pin: ~PG15
 #--------------------------------------------------------------------
 
 x_offset: 0
-y_offset: 19.75
-z_offset: 6.42
-speed: 7
+y_offset: 25.0
+z_offset: 0
+speed: 10.0
 samples: 3
 samples_result: median
-sample_retract_dist: 2.0
+sample_retract_dist: 3.0
 samples_tolerance: 0.006
 samples_tolerance_retries: 3
 
@@ -399,14 +400,14 @@ gcode_id: C
 [idle_timeout]
 timeout: 3600
 
-#[safe_z_home]
+[safe_z_home]
 ##	XY Location of the Z Endstop Switch
 ##	Update -10,-10 to the XY coordinates of your endstop pin 
 ##	(such as 157,305) after going through Z Endstop Pin
 ##	Location Definition step.
-#home_xy_position:180,255
-#speed:100
-#z_hop:10
+home_xy_position:180,255
+speed:100
+z_hop:10
 
 [quad_gantry_level]
 ##	Use QUAD_GANTRY_LEVEL to level a gantry.
@@ -460,12 +461,11 @@ max_adjust: 10
 
 [bed_mesh]
 speed: 300
-horizontal_move_z: 10
+horizontal_move_z: 2
 ##--------------------------------------------------------------------
 ##	Uncomment below for 250mm build
 mesh_min: 40, 40
 mesh_max: 210,210
-mesh_pps: 2,2
 
 ##	Uncomment for 300mm build
 #mesh_min: 40, 40
@@ -473,7 +473,7 @@ mesh_pps: 2,2
 ##--------------------------------------------------------------------
 fade_start: 0.6
 fade_end: 10.0
-probe_count: 7,7
+probe_count: 5,5
 algorithm: bicubic
 relative_reference_index: 5
 
@@ -551,21 +551,21 @@ gcode:
         SET_LED LED=btt_mini12864 RED=1 GREEN=0 BLUE=0 INDEX=3 
 
 [input_shaper]
-shaper_freq_x: 49.8
+shaper_freq_x: 46.2
 shaper_type_x: mzv
-shaper_freq_y: 40.8
+shaper_freq_y: 38.2
 shaper_type_y: mzv
 
-[mcu rpi]
-serial: /tmp/klipper_host_mcu
+#[mcu rpi]
+#serial: /tmp/klipper_host_mcu
 
-[adxl345]
-cs_pin: rpi:None
+#[adxl345]
+#cs_pin: rpi:None
 
-[resonance_tester]
-accel_chip: adxl345
-probe_points:
-    125, 125, 20  # an example
+#[resonance_tester]
+#accel_chip: adxl345
+#probe_points:
+#    125, 125, 20  # an example
 
 
 
@@ -593,31 +593,28 @@ probe_points:
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 27.239
-#*# pid_ki = 3.632
-#*# pid_kd = 51.074
+#*# pid_kp = 26.196
+#*# pid_ki = 1.397
+#*# pid_kd = 122.795
 #*#
 #*# [stepper_z]
-#*# position_endstop = 2.245
+#*# position_endstop = 2.345
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.022500, 0.030000, 0.022500, 0.027500, 0.027500, -0.007500, 0.012500
-#*# 	0.002500, -0.005000, -0.005000, -0.005000, -0.002500, -0.010000, -0.012500
-#*# 	-0.015000, 0.020000, 0.010000, 0.000000, 0.005000, -0.007500, -0.017500
-#*# 	0.025000, 0.030000, 0.032500, 0.017500, 0.022500, 0.020000, 0.020000
-#*# 	0.027500, 0.040000, 0.030000, 0.020000, 0.010000, 0.015000, 0.032500
+#*# 	0.067500, 0.055000, 0.042500, 0.047500, 0.065000
+#*# 	0.000000, -0.005000, -0.015000, -0.015000, 0.000000
+#*# 	-0.022500, -0.035000, -0.040000, -0.030000, -0.012500
+#*# 	0.032500, 0.017500, 0.015000, 0.000000, 0.025000
+#*# 	0.097500, 0.087500, 0.092500, 0.090000, 0.100000
 #*# tension = 0.2
-#*# min_x = 55.0
+#*# min_x = 40.0
 #*# algo = bicubic
 #*# y_count = 5
 #*# mesh_y_pps = 2
-#*# min_y = 68.0
-#*# x_count = 7
-#*# max_y = 184.0
+#*# min_y = 40.0
+#*# x_count = 5
+#*# max_y = 210.0
 #*# mesh_x_pps = 2
-#*# max_x = 205.96
-#*#
-#*# [endstop_phase stepper_z]
-#*# trigger_phase = 36/64
+#*# max_x = 210.0
