--- a/old cfg/printer-20220310_203508.cfg
+++ b/old cfg/printer-20220310_203508.cfg
@@ -551,21 +551,21 @@ gcode:
         SET_LED LED=btt_mini12864 RED=1 GREEN=0 BLUE=0 INDEX=3 
 
 [input_shaper]
-shaper_freq_x: 49.8
+shaper_freq_x: 46.2
 shaper_type_x: mzv
-shaper_freq_y: 40.8
+shaper_freq_y: 38.2
 shaper_type_y: mzv
 
-[mcu rpi]
-serial: /tmp/klipper_host_mcu
+#[mcu rpi]
+#serial: /tmp/klipper_host_mcu
 
-[adxl345]
-cs_pin: rpi:None
+#[adxl345]
+#cs_pin: rpi:None
 
-[resonance_tester]
-accel_chip: adxl345
-probe_points:
-    125, 125, 20  # an example
+#[resonance_tester]
+#accel_chip: adxl345
+#probe_points:
+#    125, 125, 20  # an example
 
 
 
@@ -593,31 +593,28 @@ probe_points:
 #*#
 #*# [extruder]
 #*# control = pid
-#*# pid_kp = 27.239
-#*# pid_ki = 3.632
-#*# pid_kd = 51.074
+#*# pid_kp = 26.196
+#*# pid_ki = 1.397
+#*# pid_kd = 122.795
 #*#
 #*# [stepper_z]
-#*# position_endstop = 2.245
+#*# position_endstop = 2.330
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	0.022500, 0.030000, 0.022500, 0.027500, 0.027500, -0.007500, 0.012500
-#*# 	0.002500, -0.005000, -0.005000, -0.005000, -0.002500, -0.010000, -0.012500
-#*# 	-0.015000, 0.020000, 0.010000, 0.000000, 0.005000, -0.007500, -0.017500
-#*# 	0.025000, 0.030000, 0.032500, 0.017500, 0.022500, 0.020000, 0.020000
-#*# 	0.027500, 0.040000, 0.030000, 0.020000, 0.010000, 0.015000, 0.032500
+#*# 	  0.072500, 0.055000, 0.040000, 0.042500, 0.065000
+#*# 	  0.005000, -0.002500, -0.015000, -0.015000, 0.000000
+#*# 	  -0.020000, -0.035000, -0.040000, -0.030000, -0.010000
+#*# 	  0.040000, 0.020000, 0.017500, 0.002500, 0.030000
+#*# 	  0.107500, 0.095000, 0.102500, 0.097500, 0.112500
 #*# tension = 0.2
-#*# min_x = 55.0
+#*# min_x = 40.0
 #*# algo = bicubic
 #*# y_count = 5
 #*# mesh_y_pps = 2
-#*# min_y = 68.0
-#*# x_count = 7
-#*# max_y = 184.0
+#*# min_y = 40.0
+#*# x_count = 5
+#*# max_y = 210.0
 #*# mesh_x_pps = 2
-#*# max_x = 205.96
-#*#
-#*# [endstop_phase stepper_z]
-#*# trigger_phase = 36/64
+#*# max_x = 210.0
